# veloxship

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
backend/: .editorconfig  .env.example  Dockerfile  alembic.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_extensions.py  0002_users_service_tiers_audit.py  0002b_customers.py  0003_bills.py
backend/app/: main.py
backend/app/api/v1/: auth.py  bills.py  deps.py  service_tiers.py
backend/app/core/: __init__.py  config.py  exceptions.py  i18n.py  security.py
backend/app/crud/: audit.py  bill.py  user.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit_event.py  bill.py  bill_content_line.py  bill_status_event.py  customer.py  service_tier.py  user.py
backend/app/schemas/: auth.py  bill.py  common.py  service_tier.py
backend/app/scripts/: seed.py
backend/app/services/: bill_service.py  print_service.py  tracking.py
backend/app/static/: bill_template.html  print.css
docker/: init-db.sql
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: connection-banner.spec.js  install-prompt.spec.js  mobile-wizard.spec.js  pwa-manifest.spec.js
frontend/src/: App.jsx  global.d.ts  main.jsx
specs/001-logistics-bill-app/: data-model.md  plan.md  quickstart.md  (+3 more)
(+64 files in other folders)
